# cake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/: editor_application.h
editor/include/ui/: actor_editor.h  dialogs.h  prototype_editor.h  sidebar.h
editor/src/: editor_application.cpp  main.cpp
editor/src/ui/: actor_editor.cpp  dialogs.cpp  prototype_editor.cpp  sidebar.cpp
generated_headers/: actor.gen.h  sprite_component.gen.h  stage.gen.h
katsu_templates/: class.kh  header.kh  method.kh
modules/application/: CMakeLists.txt
modules/application/include/: application.h
modules/application/src/: application.cpp
modules/core/: CMakeLists.txt
modules/core/include/extensions/: std_extensions.h
modules/core/include/object/: container_field.h  descriptor.h  field.h  field_visitor.h  fields.h  function.h  macros.h  object.h  pointer_field.h  resource.h  serializer.h  utils.h
modules/core/include/serializers/: string_serializer.h
modules/core/src/: descriptor.cpp  field.cpp  function.cpp  instance_field.cpp  object.cpp  resource.cpp  std_extensions.cpp
modules/core/tests/: function_tests.cpp  main.cpp  object_tests.cpp
modules/filesystem/: CMakeLists.txt
modules/filesystem/include/mikufs/: utils.h
modules/filesystem/src/: utils.cpp
modules/game_framework/: CMakeLists.txt
modules/game_framework/include/game_framework/: actor.h  actor_instance.h  camera.h  component.h  game.h  initialization_object.h  rendering_world.h  stage.h  transform.h
modules/game_framework/include/game_framework/components/: component_repository.h  rendering_component.h  script_component.h  sprite_component.h
modules/game_framework/include/game_framework/loaders/: actor_deserializer.h  actor_loader.h  miku_tokenizer.h  scene_loader.h  stage_deserializer.h  stage_serializer.h  texture_loader.h
modules/game_framework/include/game_framework/loaders/scene_loader/: scene_tokenizer.h
modules/game_framework/include/game_framework/properties/: common_property.h  properties.h  property.h  property_visitor.h
modules/game_framework/include/game_framework/resources/: script_resource.h  texture_resource.h
modules/game_framework/src/: actor.cpp  actor_instance.cpp  camera.cpp  game.cpp  rendering_world.cpp  sprite_component.cpp  stage.cpp  transform.cpp  utils.h
modules/game_framework/src/components/: component_repository.cpp  rendering_component.cpp  script_component.cpp  sprite_component.cpp
modules/game_framework/src/loaders/: actor_deserializer.cpp  actor_loader.cpp  miku_tokenizer.cpp  stage_deserializer.cpp  stage_serializer.cpp  texture_loader.cpp
modules/game_framework/src/loaders/scene_loader/: scene_tokenizer.cpp
modules/game_framework/src/resources/: script_resource.cpp  texture_resource.cpp
modules/graphics_api/: CMakeLists.txt
modules/graphics_api/examples/assets/shaders/: basic.vs  particles.vs  simple.vs
modules/graphics_api/examples/commons/: application.h  utilities.h
modules/graphics_api/examples/forward_lightning/: main.cpp
modules/graphics_api/examples/instancing/: main.cpp
modules/graphics_api/examples/textured_cube/: main.cpp
modules/graphics_api/examples/window/: main.cpp
modules/graphics_api/include/: api_factory.h  graphics_api.h  instanced_mesh.h  shader.h  texture.h  window.h
modules/graphics_api/src/: api_factory.cpp  window.cpp
modules/graphics_api/src/opengl/: opengl_framebuffer.h  opengl_graphics_api.cpp  opengl_graphics_api.h  opengl_instanced_mesh.cpp  opengl_instanced_mesh.h  opengl_mesh.cpp  opengl_mesh.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h
modules/graphics_api/src/opengl/glad/: glad.h
modules/input_system/: CMakeLists.txt
modules/input_system/include/input/: inputsystem.h  keys.h
modules/input_system/src/: inputsystem.cpp  utils.h
modules/loglib/: CMakeLists.txt
modules/loglib/include/logging/: logger.h
modules/loglib/src/logging/: logger.cpp
modules/luanatic/: CMakeLists.txt
modules/luanatic/include/luanatic/: binder.h  injector.h  lua.hpp  lua_field.h  script.h  script_fwd.h  table_builder.h  utils.h
modules/luanatic/src/: script.cpp  utils.cpp
modules/luanatic/tests/: bindings.cpp  object_bindings.cpp
modules/property_system/: CMakeLists.txt
modules/property_system/include/property_system/: common_property.h  property.h
modules/property_system/src/: property.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/examples/assets/shaders/: basic.fs  basic_no_ub.vs  instancing.fs  instancing.vs  particles.fs
modules/renderer/examples/assets/shaders/post_render_effects/: rainbow.fs
modules/renderer/examples/commons/: stb_image.h
modules/renderer/examples/particles/: main.cpp
modules/renderer/examples/renderer_creation/: main.cpp
modules/renderer/include/: Init.h  framebuffer.h  graphics_api.h  mesh.h  texture.h
modules/renderer/include/renderer/: renderer.hpp
modules/renderer/src/opengl/: glad.c  opengl_framebuffer.cpp  opengl_graphics_api.cpp  opengl_graphics_api.h  opengl_shader.h  opengl_texture.h
modules/renderer/src/renderer/: renderer.cpp
modules/spectacle/: CMakeLists.txt
modules/spectacle/include/: actor.h  camera.h  component.h  initialization_object.h  stage.h  transform.h
modules/spectacle/src/: actor.cpp  camera.cpp  stage.cpp  transform.cpp
